--- a/.env
+++ b/.env
@@ -3,6 +3,12 @@ DATABASE_USER=boilerplate
 DATABASE_PASSWORD=boilerplate123
 DATABASE_HOST=database
 DATABASE_PORT=5432
+
 HOST=localhost
 SERVER_PORT=8000
+
 DJANGO_SETTINGS_MODULE=djangotask.settings
+
+REDIS_PORT=6379
+
+FLOWER_PORT=5555
